--- a/src/main/resources/templates/pages/lesson/review.html
+++ b/src/main/resources/templates/pages/lesson/review.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>리뷰 작성 - 김학생</title>
+    <title>리뷰 작성</title>
     <link rel="stylesheet" th:href="@{/css/style.css}">
     <style>
         .content-wrapper {
