--- a/src/main/resources/templates/pages/booking/payment-success.html
+++ b/src/main/resources/templates/pages/booking/payment-success.html
@@ -8,7 +8,7 @@
 <body>
     <h2>주문이 완료되었습니다.</h2>
 
-    <p><strong>주문 번호</strong>: <span th:text="${orderNumber}"></span></p>
+    <p><strong>주문 번호</strong>: <span th:text="${orderId}"></span></p>
     <p><strong>총 결제 금액</strong>: <span th:text="${amount}"></span>원</p>
 
     <button onclick="location.href='/'">확인</button>
