--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -115,8 +115,8 @@
     <div class="search-container mb-4">
         <div class="position-relative mb-3">
             <i class="bi bi-search position-absolute top-50 translate-middle-y ms-3 text-muted"></i>
-            <input type="text" class="form-control search-input" placeholder="">
-            <button class="btn btn-outline-secondary position-absolute end-0 top-0 h-100 px-4 border-0" style="border-radius: 0 10px 10px 0;">검색</button>
+            <input type="text" id="searchInput" class="form-control search-input" placeholder="">
+            <button onclick="validateSearch()" class="btn btn-outline-secondary position-absolute end-0 top-0 h-100 px-4 border-0" style="border-radius: 0 10px 10px 0;">검색</button>
         </div>
         <div class="d-flex align-items-center">
             <span class="fw-bold me-3">추천 태그</span>
@@ -193,6 +193,19 @@
 
 <footer th:replace="~{fragments/footer :: footer}"></footer>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
+<script>
+    function validateSearch() {
+        const input = document.getElementById('searchInput');
+        if(input.value.trim() === "") {
+            alert("검색어를 입력해주세요!");
+            input.focus();
+            return false;
+        }
+        window.location.href = "/search?keyword=" + input.value;
+    }
+</script>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous">
+</script>
 </body>
 </html>
