프로필 페이지 구성 및 연결 완료

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -70,13 +70,13 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><img th:src="@{/images/calender.png}" width="40" height="40" title="시간표"></a>
+                    <a class="nav-link" href="/booking/courseHistory"><img th:src="@{/images/calender.png}" width="40" height="40" title="시간표"></a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/chat-room"><img th:src="@{/images/talk.png}" width="40" height="40" title="채팅"></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#"><img th:src="@{/images/profile.png}" width="40" height="40" title="프로필"></a>
+                    <a class="nav-link" href="/api/login"><img th:src="@{/images/profile.png}" width="40" height="40" title="프로필"></a>
                 </li>
             </ul>
         </div>
